# repowire

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  issues.jsonl  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
docs/: design-system.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
repowire/: cli.py  spawn.py  spawn_hints.py
repowire/channel/: server.ts
repowire/config/: models.py
repowire/daemon/: app.py  ask_tracker.py  deps.py  lifecycle_handler.py  message_router.py  peer_registry.py
repowire/daemon/routes/: asks.py  messages.py  peers.py  spawn.py  websocket.py
repowire/hooks/: _tmux.py  ask_lifecycle.py  notification_handler.py  prompt_handler.py  session_handler.py  stop_handler.py  tmux_lifecycle.py  tmux_rename_hook.sh  utils.py  websocket_hook.py
repowire/installers/: codex.py  opencode.py  pi.py  post_spawn.py
repowire/mcp/: server.py
repowire/orchestrator/: __init__.py  workspace.py
repowire/orchestrator/template/: AGENTS.md  BOOTSTRAP.md  comms.md  orchestrator.yaml.example  projects.md
repowire/orchestrator/template/memory/: MEMORY.md
repowire/orchestrator/template/patterns/: mesh-roundup.md  post-merge-cleanup.md  release-bundle-decision.md  spawn-brief-iterate.md  two-model-critique.md
repowire/protocol/: peers.py
repowire/relay/: server.py
repowire/session/: transcript.py
repowire/telegram/: bot.py
tests/: test_ask_lifecycle.py  test_ask_routes.py  test_ask_tracker.py  test_circles.py  test_cli_orchestrator.py  test_hooks.py  test_lifecycle_routes.py  test_mcp_peer_identity.py  test_message_router.py  test_notification_buffer.py  test_opencode_installer.py  test_orchestrator_workspace.py  test_pi_installer.py  test_post_spawn.py  test_routes.py  test_session_handler.py  test_spawn.py  test_spawn_hints.py  test_spawn_hints_role.py  test_stop_handler.py  test_telegram_bot.py  test_telegram_default_target.py  test_tmux_pane_resolution.py  test_transcript.py
web/: next.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/dashboard/: page.tsx  types.ts
web/app/dashboard/components/: ComposeBar.tsx  (+8 more)
web/components/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Installation.tsx  Navbar.tsx
