[project]
name = "repowire"
version = "0.10.6"
description = "Mesh network for AI coding agents - enables Claude Code, Codex, Gemini, and OpenCode sessions to communicate"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Prassanna Ravishankar" }]
keywords = ["ai", "claude", "opencode", "mcp", "mesh", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "rich>=13.7.0",
    "click>=8.1.7",
    "httpx>=0.26.0",
    "libtmux>=0.37.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
relay = []
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.1.0",
    "ty",
]

[project.scripts]
repowire = "repowire.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [
    "web/node_modules",
    "web/.next",
    ".venv",
    "dist",
]

[tool.hatch.build.targets.sdist.force-include]
"web/out" = "web/out"

[tool.hatch.build.targets.wheel]
packages = ["repowire"]

[tool.hatch.build.targets.wheel.force-include]
"web/out" = "web/out"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# TypeScript plugin code embedded as string has long lines
"repowire/installers/opencode.py" = ["E501"]

[tool.ty.rules]
# Suppress ty false positives (ty is pre-release)
possibly-missing-attribute = "ignore"  # libtmux.exc submodule
unresolved-import = "ignore"  # optional deps (opencode-ai)

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "httpx-ws>=0.8.2",
    "pytest-cov>=7.0.0",
]

